--- a/html/scss/shared.scss
+++ b/html/scss/shared.scss
@@ -136,6 +136,10 @@ body {
 
                     &.selected {
                         color: #E1E96D;
+						font-weight: 800;
+						div {
+							font-weight: 600;
+						}
                         &:after {
                             transform: rotate(-45deg);
                         }
