Added special IE-only styling to fix the position of the footnote indicator underneath the sustainability data

--- a/html/css/ie-all-versions.css
+++ b/html/css/ie-all-versions.css
@@ -31,3 +31,7 @@ input[type="range"]::-ms-track {
     color: transparent;
     border: none;
 }
+
+.region_info span.footnote sup, .region_info_wrapper span.footnote sup{
+    padding-left: 52px;
+}
