--- a/html/css/graph.css
+++ b/html/css/graph.css
@@ -1,26 +1,53 @@
 #graph {
 	width: 100%;
 	height: 100%;
+	display: -ms-grid;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+	-ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 	position: relative;
 }
 
 #graph > div {
   display: grid;
+  display: -ms-grid;
   grid-template-rows: 30px 1fr 30px;
+  -ms-grid-rows: 30px 1fr 30px;
+}
+#graph > div:nth-child(1) {
+	-ms-grid-column: 1;
+}
+#graph > div:nth-child(2) {
+	-ms-grid-column: 2;
+}
+#graph > div:nth-child(3) {
+	-ms-grid-column: 3;
+}
+#graph > div:nth-child(4) {
+	-ms-grid-column: 4;
+}
+#graph > div:nth-child(5) {
+	-ms-grid-column: 5;
+}
+#graph > div:nth-child(6) {
+	-ms-grid-column: 6;
 }
 .value {
   justify-self: center;
   color: #fff;
   text-align: center;
   font-size: 14px;
+  -ms-grid-row: 1;
 }
 
 .value:after {
   content: 'million';
   display: block;
   font-size: 12px;
+}
+
+.period {
+	-ms-grid-row: 3;
 }
 
 #graph > div:last-child .value,
@@ -30,6 +57,8 @@
 .point {
   justify-self: center;
   position: relative;
+  -ms-grid-row: 2;
+  min-height: 180px;
 }
 .y {
   position: absolute;
@@ -37,7 +66,8 @@
   height: 10px;
   background: #fff;
   border-radius: 5px;
-
+	left: 50%;
+	transform: translateX(-50%);
 }
 .period {
   justify-self: center;
@@ -49,7 +79,7 @@ div.line{
   height: 1px;
   background: rgba(255,255,255,.5);
   position: absolute;
-  left: 5px;
+  left: 50%;
 }
 
 
